trunk/Archive2/14/71898d35658157/output
main.cpp: In function 'int main()':
main.cpp:12:36: error: 'type' in 'struct std::common_type<A, C>' does not name a type
     typedef std::common_type<A,C>::type aOrC;
                                    ^
